# agent-fox-v2

./: .gitignore  .night-shift  AGENTS.md  Makefile  README.md  af  pyproject.toml
.agent-fox/: config.toml  memory.jsonl  state.jsonl
.agent-fox/specs/: spec_history.md
.claude/: settings.local.json
.specs/: agents.md  knowledge.md  tool.md
.specs/01_core_foundation/: design.md  requirements.md  tasks.md
.specs/02_planning_engine/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.specs/03_session_and_workspace/: design.md  requirements.md  tasks.md  test_spec.md
.specs/04_orchestrator/: design.md  prd.md  requirements.md  tasks.md
.specs/05_structured_memory/: requirements.md  tasks.md
.specs/06_hooks_sync_security/: design.md  prd.md  tasks.md
.specs/07_operational_commands/: prd.md  requirements.md  tasks.md  test_spec.md
.specs/08_error_autofix/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.specs/09_spec_validation/: prd.md  requirements.md  tasks.md
.specs/100_maintainer_archetype/: prd.md  requirements.md  tasks.md  test_spec.md
.specs/101_knowledge_onboarding/: prd.md  tasks.md  test_spec.md
.specs/102_multilang_entity_graph/: requirements.md  tasks.md
.specs/103_agent_conversation_trace/: tasks.md  test_spec.md
.specs/103_remove_hook_runner/: requirements.md  tasks.md  test_spec.md
.specs/104_adaptive_retrieval/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.specs/105_db_plan_state/: design.md  requirements.md  tasks.md
.specs/106_nightshift_ignore/: design.md  prd.md  tasks.md  test_spec.md
.specs/107_additional_language_analyzers/: design.md  prd.md  tasks.md  test_spec.md
.specs/108_issue_session_summary/: tasks.md
.specs/109_ai_fix_pipeline_wiring/: tasks.md
.specs/10_platform_integration/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.specs/110_hunt_dedup_and_ignore/: tasks.md
.specs/111_rich_memory_rendering/: prd.md  requirements.md  tasks.md
.specs/11_duckdb_knowledge_store/: design.md  requirements.md  tasks.md
.specs/12_fox_ball/: design.md  prd.md  requirements.md  tasks.md
.specs/13_time_vision/: design.md  requirements.md  tasks.md
.specs/16_code_command/: requirements.md
.specs/18_live_progress/: tasks.md
.specs/19_git_and_platform_overhaul/: tasks.md
.specs/20_plan_analysis/: tasks.md
.specs/21_dependency_interface_validation/: prd.md  tasks.md  test_spec.md
.specs/22_ai_criteria_fix/: tasks.md
.specs/23_global_json_flag/: requirements.md  tasks.md
.specs/24_dev_scripts/: design.md  prd.md  requirements.md  tasks.md
.specs/26_agent_archetypes/: tasks.md
.specs/27_structured_review_records/: tasks.md
.specs/28_github_issue_rest_api/: tasks.md
.specs/29_mcp_server_support/: tasks.md
.specs/30_adaptive_model_routing/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.specs/31_auto_improve/: tasks.md
.specs/32_oracle/: tasks.md
.specs/33_config_generation/: tasks.md  test_spec.md
.specs/35_hard_reset/: design.md  (+2 more)
agent_fox/: __init__.py  _build_info.py  archetypes.py
docs/: README.md  archetypes.md  architecture.md  audit-report.md  brainstorm.md  cli-reference.md  coding-harness-analysis.md  coding-session-architecture.md  config-reference.md  configuration.md  fix-command.md  memory.md  night-shift-scheduling.md  prd.md  profiles.md  prompts.md  scope_guard.md  sdk-improvement-opportunities.md  skills.md
scripts/: dump_knowledge.py
tests/: conftest.py  test_critic_false_positives.py  test_hunt_dedup_similarity.py  test_ignore_filter.py  test_ignore_ingest.py  test_ignore_label.py  test_knowledge_pruning.py
(+1381 files in other folders)
