[project]
name = "agent-fox"
version = "3.3.2"
description = "Autonomous coding-agent orchestrator"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "anthropic[vertex,bedrock]>=0.96",
    "claude-agent-sdk>=0.1.60",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "pathspec>=0.12",
    "tomlkit>=0.12",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-elixir>=0.3.4",
    "tree-sitter-kotlin>=1.0",
    "tree-sitter-dart-orchard>=0.3.1",
    "tree-sitter-bash>=0.25.1",
    "tree-sitter-html>=0.23.2",
    "tree-sitter-json>=0.24.8",
    "tree-sitter-css>=0.25.0",
    "tree-sitter-regex>=0.25.0",
    "tree-sitter-swift>=0.0.1",
]

[project.scripts]
agent-fox = "agent_fox.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".claude/worktrees"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
exclude = [".claude/worktrees"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-n auto"
markers = [
    "property: Hypothesis property-based test",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "pytest-xdist>=3.8.0",
]
